--- a/DataBase/logging.ini
+++ b/DataBase/logging.ini
@@ -5,6 +5,6 @@ USER = YessieData
 PASSWORD = NJIT
 VHOST = testHost
 EXCHANGE = logs
-QUEUE = 'logging'
+QUEUE = 'logs'
 EXCHANGE_TYPE = fanout
 AUTO_DELETE = false
