Shifted SQL to Red Machine (cut down from 4->3 VMs)

--- a/DataBase/testRabbitMQ.ini
+++ b/DataBase/testRabbitMQ.ini
@@ -1,8 +1,8 @@
 [Database]
 BROKER_HOST = 10.147.20.15
 BROKER_PORT = 5672
-USER = YessieData
-PASSWORD = NJIT
+USER = RedDataMQ
+PASSWORD = 490Pass
 VHOST = testHost
 EXCHANGE = testExchange
 QUEUE = testQueue
@@ -12,8 +12,8 @@ AUTO_DELETE = true
 [Logging]
 BROKER_HOST = 10.147.20.15
 BROKER_PORT = 5672
-USER = YessieData
-PASSWORD = NJIT
+USER = RedDataMQ
+PASSWORD = 490Pass
 VHOST = testHost
 EXCHANGE = logs
 QUEUE = 'logs'
