finalized transition; needto add sql data

--- a/DataBase/testRabbitMQ.ini
+++ b/DataBase/testRabbitMQ.ini
@@ -16,6 +16,6 @@ USER = RedDataMQ
 PASSWORD = 490Pass
 VHOST = testHost
 EXCHANGE = logs
-QUEUE = 'logs'
+QUEUE = 'logging'
 EXCHANGE_TYPE = fanout
 AUTO_DELETE = false
