--- a/DataBase/testRabbitMQ.ini
+++ b/DataBase/testRabbitMQ.ini
@@ -1,8 +1,8 @@
 [Database]
 BROKER_HOST = 10.147.20.15
 BROKER_PORT = 5672
-USER = RedDataMQ
-PASSWORD = 490Pass
+USER = YessieData
+PASSWORD = NJIT
 VHOST = testHost
 EXCHANGE = testExchange
 QUEUE = testQueue
