--- a/DataBase/testRabbitMQ.ini
+++ b/DataBase/testRabbitMQ.ini
@@ -8,3 +8,14 @@ EXCHANGE = testExchange
 QUEUE = testQueue
 ;EXCHANGE_TYPE = ????
 AUTO_DELETE = true
+
+[Logging]
+BROKER_HOST = 10.147.20.15
+BROKER_PORT = 5672
+USER = RedDataMQ
+PASSWORD = 490Pass
+VHOST = testHost
+EXCHANGE = logs
+QUEUE = 'logging'
+EXCHANGE_TYPE = fanout
+AUTO_DELETE = false
