--- a/DataBase/testRabbitMQ.ini
+++ b/DataBase/testRabbitMQ.ini
@@ -19,3 +19,27 @@ EXCHANGE = logs
 QUEUE = 'logging'
 EXCHANGE_TYPE = fanout
 AUTO_DELETE = false
+
+[API]
+BROKER_HOST = 10.147.20.15
+BROKER_PORT = 5672
+USER = YessieData
+PASSWORD = NJIT
+VHOST = testHost
+EXCHANGE = testExchange
+QUEUE = apiQueue
+;EXCHANGE_TYPE = ????
+AUTO_DELETE = true
+
+[Frontend]
+BROKER_HOST = 10.147.20.15
+BROKER_PORT = 5672
+USER = YessieData
+PASSWORD = NJIT
+VHOST = testHost
+EXCHANGE = testExchange
+QUEUE = endQueue
+;EXCHANGE_TYPE = ????
+AUTO_DELETE = true
+
+
