--- a/DataBase/testRabbitMQ.ini
+++ b/DataBase/testRabbitMQ.ini
@@ -6,6 +6,7 @@ PASSWORD = NJIT
 VHOST = testHost
 EXCHANGE = testExchange
 QUEUE = testQueue
+ROUTING_KEY = *
 ;EXCHANGE_TYPE = ????
 AUTO_DELETE = true
 
@@ -17,6 +18,7 @@ PASSWORD = 490Pass
 VHOST = testHost
 EXCHANGE = logs
 QUEUE = 'logging'
+ROUTING_KEY = *
 EXCHANGE_TYPE = fanout
 AUTO_DELETE = false
 
@@ -28,6 +30,7 @@ PASSWORD = NJIT
 VHOST = testHost
 EXCHANGE = testExchange
 QUEUE = apiQueue
+ROUTING_KEY = API
 ;EXCHANGE_TYPE = ????
 AUTO_DELETE = true
 
@@ -39,6 +42,7 @@ PASSWORD = NJIT
 VHOST = testHost
 EXCHANGE = testExchange
 QUEUE = endQueue
+ROUTING_KEY = FRONTEND
 ;EXCHANGE_TYPE = ????
 AUTO_DELETE = true
 
