modified logger to work better on other machines

--- a/DataBase/testRabbitMQ.ini
+++ b/DataBase/testRabbitMQ.ini
@@ -13,7 +13,7 @@ AUTO_DELETE = true
 [Logging]
 BROKER_HOST = 10.147.20.15
 BROKER_PORT = 5672
-USER = RedDataMQ
+USER = RedAdmin
 PASSWORD = 490Pass
 VHOST = testHost
 EXCHANGE = logs
