rabbitMQlib and testRabbitMQ.ini updated

--- a/Api/rabbit/testRabbitMQ.ini
+++ b/Api/rabbit/testRabbitMQ.ini
@@ -6,6 +6,7 @@ PASSWORD = 490password
 VHOST = testHost
 EXCHANGE = testExchange
 QUEUE = apiQueue
+ROUTING_KEY = *
 ;EXCHANGE_TYPE = ????
 AUTO_DELETE = true
 
