--- a/DataBase/testRabbitMQ.ini
+++ b/DataBase/testRabbitMQ.ini
@@ -1,7 +1,7 @@
 [Database]
 BROKER_HOST = 10.147.20.57
 BROKER_PORT = 5672
-USER = YessieData
+USER = Yessiedata
 PASSWORD = NJIT
 VHOST = testHost
 EXCHANGE = testExchange
@@ -13,8 +13,8 @@ AUTO_DELETE = true
 [Logging]
 BROKER_HOST = 10.147.20.57
 BROKER_PORT = 5672
-USER = RedAdmin
-PASSWORD = 490Pass
+USER = Yessiedata
+PASSWORD = NJIT
 VHOST = testHost
 EXCHANGE = logs
 QUEUE = 'logging'
@@ -25,7 +25,7 @@ AUTO_DELETE = false
 [API]
 BROKER_HOST = 10.147.20.57
 BROKER_PORT = 5672
-USER = YessieData
+USER = Yessiedata
 PASSWORD = NJIT
 VHOST = testHost
 EXCHANGE = testExchange
@@ -37,7 +37,7 @@ AUTO_DELETE = true
 [Frontend]
 BROKER_HOST = 10.147.20.57
 BROKER_PORT = 5672
-USER = YessieData
+USER = Yessiedata
 PASSWORD = NJIT
 VHOST = testHost
 EXCHANGE = testExchange
