--- a/DataBase/testRabbitMQ.ini
+++ b/DataBase/testRabbitMQ.ini
@@ -6,7 +6,7 @@ PASSWORD = NJIT
 VHOST = testHost
 EXCHANGE = testExchange
 QUEUE = testQueue
-ROUTING_KEY = *
+#ROUTING_KEY = *
 ;EXCHANGE_TYPE = ????
 AUTO_DELETE = true
 
@@ -18,7 +18,7 @@ PASSWORD = NJIT
 VHOST = testHost
 EXCHANGE = logs
 QUEUE = 'logging'
-ROUTING_KEY = *
+#ROUTING_KEY = *
 EXCHANGE_TYPE = fanout
 AUTO_DELETE = false
 
@@ -30,7 +30,7 @@ PASSWORD = NJIT
 VHOST = testHost
 EXCHANGE = testExchange
 QUEUE = apiQueue
-ROUTING_KEY = API
+#ROUTING_KEY = API
 ;EXCHANGE_TYPE = ????
 AUTO_DELETE = true
 
@@ -42,7 +42,7 @@ PASSWORD = NJIT
 VHOST = testHost
 EXCHANGE = testExchange
 QUEUE = endQueue
-ROUTING_KEY = FRONTEND
+#ROUTING_KEY = FRONTEND
 ;EXCHANGE_TYPE = ????
 AUTO_DELETE = true
 
