--- a/Api/rabbit/testRabbitMQ.ini
+++ b/Api/rabbit/testRabbitMQ.ini
@@ -6,7 +6,7 @@ PASSWORD = 490password
 VHOST = testHost
 EXCHANGE = testExchange
 QUEUE = apiQueue
-ROUTING_KEY = *
+ROUTING_KEY = API
 ;EXCHANGE_TYPE = ????
 AUTO_DELETE = true
 
